--- a/face-id-offline.Android/FaceIdOffline.Android.csproj
+++ b/face-id-offline.Android/FaceIdOffline.Android.csproj
@@ -7,8 +7,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>face_id_offline.Droid</RootNamespace>
-    <AssemblyName>face-id-offline.Android</AssemblyName>
+    <RootNamespace>FaceIdOffline.Droid</RootNamespace>
+    <AssemblyName>FaceIdOffline.Android</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -54,13 +54,20 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="EmguCV">
+      <Version>3.1.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.TensorFlow.Lite">
+      <Version>1.14.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tensorflow\TensorflowClassifier.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -89,9 +96,9 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\face-id-offline\face-id-offline.csproj">
-      <Project>{FD45D205-B683-4E46-A0CD-0ABB31FFB0E7}</Project>
-      <Name>face-id-offline</Name>
+    <ProjectReference Include="..\face-id-offline\FaceIdOffline.csproj">
+      <Project>{B61011B9-C318-40FF-AD65-D93CB670683D}</Project>
+      <Name>FaceIdOffline</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
